--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "PT Mono", monospace;
+  cursor: none;
   line-height: 1.6;
   background: #ffffff;
   overflow-x: hidden;
@@ -270,7 +271,6 @@ h4,
 .site-nav a {
   position: relative;
   z-index: 9;
-  cursor: pointer;
 }
 
 .site-nav {
@@ -526,11 +526,9 @@ h4,
   height: 30px;
   width: 30px;
   z-index: 99;
-  cursor: pointer;
   top: -20px;
 }
 .site-mobile-menu-close > span {
-  cursor: pointer;
   display: block;
   position: absolute;
   height: 30px;
@@ -593,7 +591,6 @@ h4,
   padding-left: 10px;
   padding-right: 0px;
   line-height: 1;
-  cursor: pointer;
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
@@ -652,7 +649,6 @@ h4,
   width: 36px;
   height: 36px;
   text-align: center;
-  cursor: pointer;
   border-radius: 50%;
   border: 1px solid #f8f9fa;
 }
@@ -769,7 +765,6 @@ h4,
 .burger {
   width: 28px;
   height: 32px;
-  cursor: pointer;
   position: relative;
 }
 .burger.light:before,
@@ -1306,7 +1301,6 @@ figure.dotted-bg:before {
 .unslate_co--close-portfolio {
   position: absolute;
   top: -10px;
-  cursor: pointer;
   z-index: 9;
   padding: 10px 10px 10px 10px;
   right: -10px;
@@ -1829,7 +1823,6 @@ figure.dotted-bg:before {
   position: relative;
   padding-left: 30px;
   margin-bottom: 15px;
-  cursor: pointer;
   font-size: 18px;
 }
 .control .caption {
@@ -2229,11 +2222,28 @@ figure.dotted-bg:before {
 }
 
 .item img {
-  animation: fadeAnimation 5s ease-in-out  alternate;
+  animation: fadeAnimation 5s ease-in-out alternate;
 }
 
 @keyframes fadeAnimation {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-} 
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+::-webkit-scrollbar {
+  display: none;
+}
 
+
+.custom-cursor {
+  position: fixed;
+  width: 20px; /* Adjust size as needed */
+  height: 20px; /* Adjust size as needed */
+  background-image: url('/images/cursor.png'); /* Replace path with your image */
+  background-size: contain;
+  pointer-events: none; /* Ensure cursor doesn't interfere with interaction */
+  z-index: 9999; /* Ensure it's on top of other elements */
+}
